# neural-network-from-scratch

./: README.md  nn.py  pyproject.toml  tempCodeRunnerFile.py  tests.py
src/: nn.py
